# CameraLG

./: .gitignore  CMakeLists.txt  CameraFactory.cpp  CameraFactory.h  DEVELOPMENT.md  DEVELOPMENT_EN.md  ICameraDevice.h  ImageFrameData.h  LICENSE  README.md  README_EN.md  app_constants.h  bad_pixel_picker_dialog.cpp  bad_pixel_picker_dialog.h  bad_pixel_tool_dialog.cpp  bad_pixel_tool_dialog.h  bit_depth_slider.cpp  bit_depth_slider.h  build_config.h  cameramanager.cpp  cameramanager.h  cameraparameter.cpp  cameraparameter.h  camerui.rc  dark_theme.qss  detail_histogram_widget.cpp  detail_histogram_widget.h  device_dock.cpp  device_dock.h  device_selector_widget.cpp  device_selector_widget.h  display_dock.cpp  display_dock.h  editable_number_label.cpp  editable_number_label.h  gige_camera_device.cpp  gige_camera_device.h  gige_dock.cpp  gige_dock.h  histogram_equalization_display.cpp  (+91 more)
icon/: resources.qrc
